# assist-heidi-speech-jokey

./: .gitignore  LICENSE  NOTES.md  README.md  natasa-speech-synthesis.code-workspace  pyproject.toml  requirements.txt  setup.py
.github/scripts/windows/: build_exe.ps1  build_exe_onefile.ps1
.github/static/: SpeechJokey.spec
.github/workflows/: ci_app_windows.yml  ci_exe_windows.yml
doc/diagrams/: Untitled Diagram.drawio
playground/: PLAYGROUND.md  expansion_panel.py
src/: SpeechJokey.kv  app.py  main.py  test_widget.py
src/api/: README.md  api_factory.py  base.py  base_settings.py
src/api/ExampleAPI/: exampleapi.kv  exampleapi.py
src/api/elevenlabs/: eleven_labs.py
src/api/elevenlabsapi/: elevenlabsapi.kv  elevenlabsapi.py
src/api/exampleapi/: exampleapi.kv  exampleapi.py
src/modules/dialog/: exitdialog.kv  exitdialog.py  loaddialog.kv  loaddialog.py  savedialog.kv  savedialog.py
src/modules/speech-markdown/: simple_speech_markdown.py
src/modules/ssml/: PySSML.py  Speech.py  ssml_wrapper.py
src/modules/util/: widget_loader.py
src/screens/: about.kv  about.py  main_screen.kv  main_screen.py  settings.kv  settings.py
src/settings/: AppSettingsPopup.kv  app_settings.py  appsettings.kv
