[tool.poetry]
name = "speech-jokey"
version = "0.0.1"
description = "An application to synthesize speech using arbitrary voice APIs"
license = "MIT"
authors = [
    "HackXIt <hackxit@gmail.com>",
    "ChiaraCalvo <c.calvo1@studenti.unibg.it>",
    "Martina Tumsich <some-email@your-email.com>"
]
readme = "README.md"
repository = "https://github.com/HackXIt/assist-heidi-speech-jokey"
keywords = ["speech-synthesis", "ML", "cerebral-pulsy"]

[tool.poetry.dependencies]
python = "^3.11.0"
kivy = {version = "2.2.1", extras = ["base"]}
six = "^1.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
